# open-cuda

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT-NEXT.md  OmniGPU-Design.md  README-Japan.md  README-VULKAN.md  README.ja.md  lib.rs  main.rs  open-cuda(iLumi)..txt  open-cuda(iLumi).md
README/: README-Arabic.md  README-China.md  README-France.md  README-Germany.md  README-INDEX.md  README-IRAN_Persian.md  README-Italy.md  README-Korea.md  README-Russia.md  README-Taiwan.md  README-UK_English.md  README-US_English.md  README-Ukraine.md
crates/opencuda-blas/: Cargo.toml
crates/opencuda-blas/src/: lib.rs
crates/opencuda-core/: Cargo.toml
crates/opencuda-core/src/: device.rs  error.rs  kernel.rs  memory.rs  registry.rs
crates/opencuda-cpu/: Cargo.toml
crates/opencuda-cpu/src/: lib.rs
crates/opencuda-ir/: Cargo.toml
crates/opencuda-ir/src/: lib.rs
crates/opencuda-mock/: Cargo.toml
crates/opencuda-mock/src/: lib.rs
crates/opencuda-mock/tests/: mock_device.rs
crates/opencuda-multidev/: Cargo.toml
crates/opencuda-multidev/src/: lib.rs
crates/opencuda-vulkan/: Cargo.toml
crates/opencuda-vulkan/src/: lib.rs  real.rs
crates/opencuda-vulkan/tests/: omniir_path.rs  vulkan_mock.rs
examples/matmul/: Cargo.toml
examples/matmul/src/: main.rs
examples/vector_add/: Cargo.toml
examples/vector_add_omniir/: Cargo.toml
examples/vector_add_omniir/src/: main.rs
examples/vector_add_vulkan/: Cargo.toml
examples/vector_add_vulkan/shaders/: vector_add.comp
examples/vector_add_vulkan/src/: main.rs
examples/vector_add_vulkan_real/: Cargo.toml
examples/vector_add_vulkan_real/shaders/: vector_add.comp
examples/vector_add_vulkan_real/src/: main.rs
examples/vulkan_info/: Cargo.toml
examples/vulkan_info/src/: main.rs
tools/: compile-vulkan-shaders.cmd  compile-vulkan-shaders.ps1  compile-vulkan-shaders.sh  test-v0.3.5.cmd  test-v0.3.5.ps1  test-v0.3.5.sh  test-vulkan-real-v0.3.5.cmd  test-vulkan-real-v0.3.5.ps1
