[package]
name = "opencuda-blas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI kernel library for OpenCUDA: GEMM, attention, quantization (Phase 3)."

[dependencies]
opencuda-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
half.workspace = true
