[package]
name = "opencuda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core abstractions for OpenCUDA: GpuDevice trait, two-layer memory, kernel representation."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
