[package]
name = "opencuda-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CPU backend for OpenCUDA (rayon multithreaded). The first execution target."

[dependencies]
opencuda-core.workspace = true
anyhow.workspace = true
rayon.workspace = true
tracing.workspace = true
