[package]
name = "opencuda-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal OmniIR model and lowering helpers for OpenCUDA v0.2."

[dependencies]
opencuda-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
