[package]
name = "opencuda-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hardware-free mock backend for OpenCUDA tests and CI."

[dependencies]
opencuda-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
