[package]
name = "vulkan_info"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
opencuda-core.workspace = true
opencuda-vulkan = { workspace = true, features = ["real-vulkan"] }
anyhow.workspace = true

[[bin]]
name = "vulkan_info"
path = "src/main.rs"
